fixed alignments of h2

--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,6 @@ h1 {
 }
 
 h2 {
-    text-align: center;
     font-size: 2rem;
 }
 
